--- a/platformio.ini
+++ b/platformio.ini
@@ -8,10 +8,13 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
+
 [env:nodemcuv2]
 platform = espressif8266
 board = nodemcuv2
 framework = arduino
+
 lib_deps =
   olikraus/U8g2 @ 2.28.8
   arduino-libraries/NTPClient @ 3.1.0
+  jchristensen/Timezone @ ~1.2.4
