Add comprehensive security scanning to CI/CD pipeline
- Add secret detection with TruffleHog in build workflow
- Create dedicated security scan workflow with daily scans
- Add pre-commit hook for local secret detection
- Update .gitignore with additional secret protection patterns
- Document security features in README
- Implement custom pattern detection for WiFi credentials, API keys, and network identifiers

--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,13 @@ include/config.h
 # OS files
 .DS_Store
 Thumbs.db
+
+# Additional secret protection
+**/secrets.h
+**/credentials.*
+**/*password*
+**/*secret*
+
+# Backup files
+*.bak
+*.backup
