--- a/.github/workflows/build-platformio.yml
+++ b/.github/workflows/build-platformio.yml
@@ -7,8 +7,51 @@ on:
     branches: [ master ]
 
 jobs:
+  security-scan:
+    runs-on: ubuntu-latest
+    name: Secret Detection
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0  # Fetch full history for secret scanning
+          
+      - name: Run TruffleHog OSS
+        uses: trufflesecurity/trufflehog@main
+        with:
+          path: ./
+          base: main
+          head: HEAD
+          extra_args: --debug --only-verified
+          
+      - name: Check for hardcoded secrets in source files
+        run: |
+          echo "Checking for potential secrets in source files..."
+          
+          # Check for common secret patterns
+          if grep -r -E "(password|secret|key|token)\s*=\s*['\"][^'\"]{8,}" src/ include/ --include="*.ino" --include="*.cpp" --include="*.h" || true; then
+            echo "⚠️  Potential secrets found in source files!"
+            grep -r -E "(password|secret|key|token)\s*=\s*['\"][^'\"]{8,}" src/ include/ --include="*.ino" --include="*.cpp" --include="*.h" || true
+            exit 1
+          fi
+          
+          # Check for WiFi credentials
+          if grep -r -E "(ssid|password)\s*=\s*['\"][^'\"]{3,}" src/ include/ --include="*.ino" --include="*.cpp" --include="*.h" | grep -v "YOUR_" | grep -v "example" || true; then
+            echo "⚠️  Potential WiFi credentials found!"
+            grep -r -E "(ssid|password)\s*=\s*['\"][^'\"]{3,}" src/ include/ --include="*.ino" --include="*.cpp" --include="*.h" | grep -v "YOUR_" | grep -v "example" || true
+            exit 1
+          fi
+          
+          # Check for MAC addresses or specific network names
+          if grep -r -E "(Livebox|[0-9A-F]{2}:[0-9A-F]{2}:[0-9A-F]{2}:[0-9A-F]{2}:[0-9A-F]{2}:[0-9A-F]{2})" src/ include/ --include="*.ino" --include="*.cpp" --include="*.h" || true; then
+            echo "⚠️  Potential real network identifiers found!"
+            exit 1
+          fi
+          
+          echo "✅ No secrets detected in source files"
+
   build:
     runs-on: ubuntu-latest
+    needs: security-scan
     steps:
       - uses: actions/checkout@v4
       - uses: actions/cache@v4
