fix dynamic config for secrets

--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,7 @@
 # .env is ignored by git to protect your secrets
 
 # WiFi Configuration - Replace with your actual values
-PLATFORMIO_BUILD_FLAGS=-DWIFI_SSID=\\"YOUR_WIFI_SSID\\" -DWIFI_PASSWORD=\\"YOUR_WIFI_PASSWORD\\" -DNTP_SERVER=\\"europe.pool.ntp.org\\" -DGMT_OFFSET_SEC=3600
+-D WIFI_SSID=\"YOUR_WIFI_SSID\"
+-D WIFI_PASSWORD=\"YOUR_WIFI_PASSWORD\"
+-D NTP_SERVER=\"europe.pool.ntp.org\"
+-D GMT_OFFSET_SEC=3600
