--- a/platformio.ini
+++ b/platformio.ini
@@ -18,3 +18,6 @@ lib_deps =
   olikraus/U8g2 @ 2.28.8
   arduino-libraries/NTPClient @ 3.1.0
   jchristensen/Timezone @ ~1.2.4
+
+; Dynamic build flags - loads secrets and settings (e.g. WiFi credentials) from .env file if it exists
+build_flags = !test -f .env && cat .env | grep -v '^#' || echo ""
