--- a/.github/workflows/check-platformio-deps.yml
+++ b/.github/workflows/check-platformio-deps.yml
@@ -24,6 +24,12 @@ jobs:
         
     - name: Install Python Dependencies
       run: pip install -r requirements.txt
+      
+    - name: Cache PlatformIO build cache
+      uses: actions/cache@v4
+      with:
+        path: ~/.platformio/.cache
+        key: ${{ runner.os }}-platformio-${{ hashFiles('platformio.ini') }}
 
     - name: List current library versions
       run: |
