--- a/.github/workflows/check-platformio-deps.yml
+++ b/.github/workflows/check-platformio-deps.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v4
       
     - name: Set up Python
-      uses: actions/setup-python@v4
+      uses: actions/setup-python@v5
       with:
         python-version: '3.11'
         cache: 'pip'
@@ -24,6 +24,12 @@ jobs:
         
     - name: Install Python Dependencies
       run: pip install -r requirements.txt
+      
+    - name: Cache PlatformIO build cache
+      uses: actions/cache@v4
+      with:
+        path: ~/.platformio/.cache
+        key: ${{ runner.os }}-platformio-${{ hashFiles('platformio.ini') }}
 
     - name: List current library versions
       run: |
