Adjust brightness at compile time

--- a/.env.example
+++ b/.env.example
@@ -6,4 +6,7 @@
 -D WIFI_SSID=\"YOUR_WIFI_SSID\"
 -D WIFI_PASSWORD=\"YOUR_WIFI_PASSWORD\"
 -D NTP_SERVER=\"europe.pool.ntp.org\"
--D GMT_OFFSET_SEC=3600
+-D GMT_OFFSET_SEC=3600 # Set to your timezone offset in seconds (e.g., 3600 for GMT+1)
+
+# Optional: Adjust brightness for displays or LEDs
+# -D BRIGHTNESS=2 # Adjust brightness as needed (0-255)
